Fixed - Lightbox confirmation message on iphone. PT#39524085

--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -912,11 +912,16 @@ input[type="submit"].btn-yellow, .btn-yellow{
 .lead-capture{
   h1 {
     color: #444;
-    margin-bottom: 0.5em;
     font-size: 40px;
     line-height: 1em;
     text-align: center;
-    margin: 50px 0 70px 0;
+    margin: 70px 0;
+  }
+  .modal-header{
+    border:none;
+  }
+  .modal-body {
+    overflow-y: visible;
   }
   .modal-footer{
     background:#ccc;
